# pilot_code_agent

./: README.md  main.py  pyproject.toml  requirements.txt
benchmarks/: config_mbpp_benchmark.yaml  load_mbpp.py  test_benchmark.ipynb  utils.py
docs/: report.md
notebooks/: config_node.yaml  run.ipynb  run_chatbot.ipynb  run_chatbot_subgraph.ipynb
src/code_agent/: __init__.py
src/code_agent/chatbot/: graph_utils.py  interactive_chat.py  pretty_print.py
src/code_agent/data/: data_loader.py
src/code_agent/data/user_input_examples/: simple_example.json  syntax_error_example.json
src/code_agent/graph/: __init__.py  build.py  poc_code_agent.py  state.py  supervisor.py
src/code_agent/graph/execution/: build.py  output_formatter.py
src/code_agent/graph/execution/nodes/: entry_node.py  error_handler.py  extract_result.py  message_append.py  run_assistant.py  stream_callback.py  thread_manager.py
tests/test_code_agent/test_graph/test_execution/: test_build.py
tests/test_code_agent/test_graph/test_execution/test_nodes/: test_entry_node.py  test_error_handler.py  test_extract_result.py  test_message_append.py  test_run_assistant.py  test_thread_manager.py
