[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "code-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.8.0",
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "langchain>=0.3.23",
    "langgraph>=0.3.31",
    "matplotlib>=3.10.1",
    "openai>=1.75.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
